# VCMP-Lua

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Core.cpp  README.md  VCMP-LUA.sln  VCMPLua.sln  build.py  conanfile.txt  pch.h  premake5.lua
.github/workflows/: main.yml
VCMP-LUA/: CMakeLists.txt  Core.cpp  LuaPlugin.vcxproj  LuaPlugin.vcxproj.filters  Makefile  VCMP-LUA.filters  VCMP-LUA.vcxproj  pch.h  premake5.lua  server_log.txt
VCMP-LUA/include/: utility.h  vcmp.h
VCMP-LUA/lua/: CMakeLists.txt  lualib64.lib
VCMP-LUA/modules/crypto/: CMakeLists.txt  Makefile  module-crypto.vcxproj  module-crypto.vcxproj.filters  premake5.lua
VCMP-LUA/modules/crypto/include/algorithm/detail/: kupyna_provider.hpp
VCMP-LUA/modules/crypto/include/detail/: functions.hpp
VCMP-LUA/modules/crypto/src/: src.cpp
VCMP-LUA/modules/mariadb/: premake5.lua
VCMP-LUA/modules/mariadb/include/: main.hpp
VCMP-LUA/modules/mariadb/include/mysql/: mysql_version.h  mysqld_error.h
VCMP-LUA/modules/mariadb/src/: main.cpp
VCMP-LUA/modules/requests/: Makefile  module-cpr.vcxproj  module-cpr.vcxproj.filters  premake5.lua
VCMP-LUA/modules/requests/cpr/lib/: cpr.lib  gtest_main.lib  libcurl.lib  mongoose.lib  test_server.lib
VCMP-LUA/modules/sqlite3/: module-sqlite3.make  module-sqlite3.vcxproj  module-sqliteCpp.make  module-sqliteCpp.vcxproj  module-sqliteCpp.vcxproj.filters  premake5.lua
VCMP-LUA/sol/: sol.hpp
VCMP-LUA/vcmpWrap/: Constants.h  TimerManager.cpp  TimerManager.h  globaTables.h  globalTables.h  vcmpCallbacks.h  vcmpTimer.cpp  vcmpTimer.h
VCMP-LUA/vcmpWrap/Classes/: Bind.cpp  Bind.h  Checkpoint.cpp  Checkpoint.h  Object.cpp  Object.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  Server.cpp  Server.h  Stream.cpp  Stream.h  Vehicle.cpp  Vehicle.h
VCMP-LUA/vcmpWrap/EventManager/: EventManager.cpp  EventManager.h
VCMP-LUA/vcmpWrap/Log/: Logger.h
VCMP-LUA/vcmpWrap/Modules/CPR/: Remote.cpp  Remote.h
VCMP-LUA/vcmpWrap/Modules/Crypto/: Hash.h
VCMP-LUA/vcmpWrap/Modules/MariaDB/: MySQL.cpp  MySQL.h  MySQLAccount.cpp  MySQLAccount.h  MySQLConnection.cpp  MySQLConnection.h
VCMP-LUA/vcmpWrap/Modules/Misc/: Debugger.hpp  Inspect.hpp
VCMP-LUA/vcmpWrap/Modules/SqLite3/: SqLite.cpp  SqLite.h
VCMP-LUA/vcmpWrap/Modules/Thread/: Thread.cpp  Thread.h
VCMP-LUA/vcmpWrap/Timer/: TimerManager.cpp  TimerManager.h  vcmpTimer.cpp  vcmpTimer.h
bin-int/Release-windows-x86_64/Lua/Lua.tlog/: CL.1016.write.1.tlog  CL.11812.write.1.tlog  CL.11892.write.1.tlog  CL.16064.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lua.lastbuildstate
bin-int/Release-windows-x86_64/LuaPlugin/: LuaPlugin.dll.recipe
bin-int/Release-windows-x86_64/LuaPlugin/LuaPlugin.tlog/: CL.11764.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LuaPlugin.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-windows-x86_64/spdlog/spdlog.tlog/: CL.10796.write.1.tlog  CL.12380.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  spdlog.lastbuildstate
include/: utility.h  vcmp.h
premake/: win-build.bat
vcmpWrap/: Constants.h  globalTables.h  vcmpCallbacks.h
vcmpWrap/Classes/: Bind.cpp  Bind.h  Checkpoint.cpp  Checkpoint.h  Object.cpp  Object.h  Pickup.cpp  Player.h  Server.cpp  Server.h  Stream.h  Vehicle.h
vcmpWrap/EventManager/: EventManager.cpp  EventManager.h
vcmpWrap/Log/: Logger.h
vcmpWrap/Modules/CPR/: Remote.cpp  Remote.h
vcmpWrap/Modules/Crypto/: Hash.cpp  Hash.h
vcmpWrap/Modules/JSON/: JSON.hpp
vcmpWrap/Modules/MariaDB/: MySQL.cpp  MySQL.h  MySQLAccount.cpp  MySQLAccount.h  MySQLConnection.cpp  MySQLConnection.h
vcmpWrap/Modules/Misc/: debugger_lua.h
vcmpWrap/Modules/SqLite3/: SqLite.h
vcmpWrap/Modules/Thread/: Thread.cpp  Thread.h
vcmpWrap/Timer/: TimerManager.h  vcmpTimer.cpp  vcmpTimer.h
